--- a/src/styles/Tutoriales.css
+++ b/src/styles/Tutoriales.css
@@ -1,18 +1,30 @@
+
 .Tutoriales {
-  position: relative;
-  z-index: 2;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: auto 1fr;
-  grid-template-areas:
-      "last tutorials"
-      "last tutorials";
-  gap: 64px 96px;
-  padding-top: 64px;
-  background: hsl(210deg 30% 8%);
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-template-areas:
+        "last"
+        "tutorials"
 }
 
 .header_wrapper{
   z-index: 3;
   background: hsl(210deg 30% 8%);
+}
+
+@media screen and (min-width: 769px) {
+  .Tutoriales {
+    position: relative;
+    z-index: 2;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto 1fr;
+    grid-template-areas:
+        "last tutorials"
+        "last tutorials";
+    gap: 64px 96px;
+    padding-top: 64px;
+    background: hsl(210deg 30% 8%);
+  }
+
 }
