--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
   display: flex;
 }
 .margin_10{
-  margin: 10px;
+  margin: 5px;
 }
 
 .small_spacer{
@@ -15,13 +15,28 @@
   min-height: 16px;
 }
 
+.max_size_container{
+  width: 100%;
+  max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+@media screen and (min-width: 425px) {
+  .max_size_container{
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
 @media screen and (min-width: 769px) {
   .max_size_container{
-    width: 100%;
-    max-width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
     padding-left: 32px;
     padding-right: 32px;
+  }
+  .margin_10{
+    margin: 10px;
   }
 }
