--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,24 +1,6 @@
-.Home{
-  font-family: var(--font-family);
-  position: relative;
-  z-index: 2;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: auto 1fr;
-  grid-template-areas:
-      "projects categories"
-      "projects popular";
-  gap: 64px 96px;
-  padding-top: 64px;
-  background: hsl(210deg 30% 8%);;
-}
-
-.projects{
-  grid-area: projects;
-}
 
 .heading_section_projects{
-  font-size: calc(2.375rem);
+  font-size: calc(1rem);
   color: hsl(333deg 100% 52%);
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -46,22 +28,49 @@
   color: var(--color-text);
 }
 
-.heading_small_title{
-  font-weight: 700;
-  font-size: calc(1.375rem);
-  color: hsl(210deg 25% 96%)
-}
+@media screen and (min-width: 769px) {
 
-.project_desc{
-  font-size: 1rem;
-  margin-top: 16px;
-}
+  .Home{
+    font-family: var(--font-family);
+    position: relative;
+    z-index: 2;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto 1fr;
+    grid-template-areas:
+        "projects categories"
+        "projects popular";
+    gap: 64px 96px;
+    padding-top: 64px;
+    background: hsl(210deg 30% 8%);;
+  }
 
-.project_info{
-  position: relative;
-  display: inline-flex;
-  -webkit-box-align: center;
-  align-items: center;
-  font-size: 1rem;
-  font-weight: 700;
+  .projects{
+    grid-area: projects;
+  }
+
+  .heading_section_projects{
+    font-size: calc(2.375rem);
+  }
+
+  .heading_small_title{
+    font-weight: 700;
+    font-size: calc(1.375rem);
+    color: hsl(210deg 25% 96%)
+  }
+
+  .project_desc{
+    font-size: 1rem;
+    margin-top: 16px;
+  }
+
+  .project_info{
+    position: relative;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: 700;
+  }
+
 }
